# tg_boot

./: Dockerfile_dj  docker-compose.yml  main.py  pyproject.toml  requirements.txt
Version_1/: Dockerfile  config.py  handlers.py  main.py  pyproject.toml  подсказки к командам.txt
Version_1/date/: .env  config.py
Version_1/flask/: main.py
Version_1/flask/templates/: index.html
Version_1/handlerss/: client.py  list_students.py  register_command.py  start_main.py
Version_1/handlerss/kmn/: kmn_game.py  states.py
Version_1/keyboards/: inlinekeyboard.py  keyboard.py
nginx/: nginx.conf
tg_bot_data/: Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
tg_bot_data/api_data/: admin.py  models.py  serializers.py  urls.py  views.py
tg_bot_data/api_data/management/commands/: create_superuser.py
tg_bot_data/api_data/migrations/: 0001_initial.py  0002_alter_tguser_tg_id_alter_tguser_username_listgames.py  0003_alter_listgames_table.py  0004_remove_listgames_players_listgames_identify_game_and_more.py  0005_alter_listgames_identify_game.py  0006_alter_tguser_tg_id.py  0007_alter_listgames_identify_game.py  0008_alter_listgames_game_name.py  0009_alter_tguser_username.py
tg_bot_data/tg_bot_data/: asgi.py  settings.py  urls.py  wsgi.py
