[tool.poetry]
name = "tg-boot"
version = "0.1.0"
description = ""
authors = ["zifrit <zifrit@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
